<resources>
    <string name="app_name" translatable="false">Lackey</string>
    <string name="all">All</string>
    <string name="shutter">shutter</string>
    <string name="roller_shutter">Roller shutter</string>
    <string name="light">Light</string>
    <string name="heater">Heater</string>
    <string name="title2">Monitor your home with a touch</string>
    <string name="device_image">Device image</string>
    <string name="on" translatable="false">On</string>
    <string name="off" translatable="false">Off</string>
    <string name="my_account">My account</string>
    <string name="full_name">Full name</string>
    <string name="birth_date">Birth date</string>
    <string name="address">Address</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="street_name">Street name</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="delete">Delete</string>
    <string name="profile">profile</string>
    <string name="street_number">Street Number</string>
    <string name="zipcode">Zipcode</string>
</resources>