<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="user"
            type="fr.mjoudar.lackey.domain.models.User" />
    </data>

    <ScrollView
        android:id="@+id/info_edit"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="120dp"
                android:layout_marginHorizontal="40dp"
                android:text="@string/my_account"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/my_account_title" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/card_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/my_account_text_view_topping"
                        android:text="@string/full_name"/>


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name"
                        android:inputType="textPersonName"
                        app:endIconMode="clear_text"
                        android:layout_margin="10dp"
                        android:textColorHint="@color/grey_1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_person"
                            android:drawablePadding="10dp"
                            android:text="@={user.firstName}"
                            android:textColor="@color/grey_1"
                            android:inputType="textPersonName" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name"
                        android:inputType="textPersonName"
                        app:endIconMode="clear_text"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginBottom="16dp"
                        android:textColorHint="@color/grey_1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_person"
                            android:drawablePadding="10dp"
                            android:text="@={user.lastName}"
                            android:textColor="@color/grey_1"
                            android:inputType="textPersonName" />
                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_birth_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/card_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_view_name">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/my_account_text_view_topping"
                        android:text="@string/birth_date"/>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                        android:id="@+id/birth_date"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        app:startIconContentDescription="Date icon"
                        app:startIconDrawable="@drawable/ic_birthdate"
                        android:textColorHint="@color/grey_1"
                        android:layout_margin="10dp">

                        <AutoCompleteTextView
                            android:id="@+id/birth_date_autocomplete"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/birth_date"
                            android:inputType="date"
                            birthDate="@{user}"
                            android:textColor="@color/grey_1"
                            android:labelFor="@id/birth_date" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/card_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_view_birth_date">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/my_account_text_view_topping"
                        android:text="@string/address"
                        android:id="@+id/section_add_edit_offer_address_title"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/street_name"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:endIconMode="clear_text"
                        app:endIconTint="@color/light_grey_2"
                        android:layout_marginTop="10dp"
                        android:layout_margin="10dp"
                        android:textColorHint="@color/grey_1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/section_add_edit_offer_address_title">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/street_name"
                            android:inputType="textPostalAddress"
                            android:text="@={user.address.street}"
                            android:textColor="@color/grey_1"
                            android:singleLine="true"
                            android:scrollbars="horizontal" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/street_number"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_margin="10dp"
                        android:layout_weight="0.5"
                        app:endIconMode="clear_text"
                        app:endIconTint="@color/light_grey_2"
                        android:textColorHint="@color/grey_1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/zip_code"
                        app:layout_constraintTop_toBottomOf="@id/street_name">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/add_edit_offer_state"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/street_number"
                            android:inputType="text"
                            android:text="@={user.address.streetCode}"
                            android:textColor="@color/grey_1"
                            android:scrollbars="horizontal"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/zip_code"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="20dp"
                        android:layout_margin="10dp"
                        android:layout_weight="0.5"
                        app:endIconMode="clear_text"
                        app:endIconTint="@color/light_grey_2"
                        android:textColorHint="@color/grey_1"
                        app:layout_constraintStart_toEndOf="@id/street_number"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/street_name">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/zip"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/zipcode"
                            android:inputType="number"
                            zipCode="@{user.address.zipCode}"
                            android:textColor="@color/grey_1"
                            android:scrollbars="horizontal"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/city"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_margin="10dp"
                        app:endIconMode="clear_text"
                        app:endIconTint="@color/light_grey_2"
                        android:textColorHint="@color/grey_1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/street_number">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/city"
                            android:inputType="text"
                            android:text="@={user.address.city}"
                            android:textColor="@color/grey_1"
                            android:singleLine="true"
                            android:scrollbars="horizontal" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/country"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_margin="10dp"
                        android:layout_weight="0.5"
                        app:endIconMode="clear_text"
                        app:endIconTint="@color/light_grey_2"
                        android:textColorHint="@color/grey_1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/city"
                        app:layout_constraintBottom_toBottomOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/country"
                            android:inputType="text"
                            android:text="@={user.address.country}"
                            android:textColor="@color/grey_1"
                            android:singleLine="true"
                            android:scrollbars="horizontal" />

                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@id/card_view_address"
                app:layout_constraintTop_toBottomOf="@id/card_view_address"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginVertical="40dp"
                android:text="@string/save"
                android:drawableEnd="@drawable/ic_save"
                android:textSize="16sp"
                android:paddingHorizontal="24dp"
                android:paddingVertical="14dp"
                app:cornerRadius="16dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>